--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
         align-items: center;
         background-size: cover;
         background-position-y: 30%;
-        background-position-x: 30%
+        background-position-x: 30% ;
         padding : 0 10px;
         user-select: none;
         position: relative;
@@ -55,9 +55,9 @@ display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.botones-barra{
+/* .botones-barra{
 
-}
+} */
 
 .boton
 {
