--- a/style.css
+++ b/style.css
@@ -1,102 +1,86 @@
-<<<<<<< HEAD
-
-body{
-   
+body {
     background-image: url(./imagenes/background.jpg);
-    
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-size: cover;
-        background-position-y: 30%;
-        background-position-x: 30%
-        padding: 0 10px;
-        background-position-x: 30% ;
-        padding : 0 10px;
-        user-select: none;
-        position: relative;
-        background-repeat: no-repeat;
-        background-size: cover; 
-      
-     
-    
-    
-} 
-
-/* ---------------- ESTILOS GRILLA ------------------ */ 
-
-.grilla { 
-display: flex;
-flex-wrap: wrap;
-background-color:  rgba(25, 0, 0, 0.5);
-display: flex;
-} 
-
-.estructura{
- 
+    display: flex;
     justify-content: center;
     align-items: center;
-
+    background-size: cover;
+    background-position-y: 30%;
+    background-position-x: 30%;
+    padding: 0 10px;
+    background-position-x: 30%;
+    padding: 0 10px;
+    user-select: none;
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.matcheadas{
+/* ---------------- ESTILOS GRILLA ------------------ */
+
+.grilla {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: rgba(25, 0, 0, 0.5);
+    display: flex;
+}
+
+.estructura {
+    justify-content: center;
+    align-items: center;
+}
+
+.matcheadas {
     text-align: center;
     font-size: 40px;
     margin-top: 32px;
     margin-bottom: 16px;
 }
 
-
-.puntos{
+.puntos {
     display: flex;
-    
 }
 
-.barra{
+.barra {
     display: flex;
     background-color: crimson;
     justify-content: space-between;
     align-items: center;
 }
 
-
-.juego-terminado{
+.juego-terminado {
     display: flex;
     background-color: brown;
 }
 
-.dialogo-dificultad{
+.dialogo-dificultad {
     display: flex;
     background-color: coral;
 }
 
-.dialogo-botones{
+.dialogo-botones {
     display: flex;
     background-color: cornflowerblue;
 }
-.estilo-botones-barra{
 
-}
+/* .estilo-botones-barra{
+
+} */
 
 /* .botones-barra{
 
 } */
 
-.boton
-{
+.boton {
     background-color: transparent;
     border: none;
     font-size: 20px;
-    
 }
 
-=======
->>>>>>> f0fd8bf16da2c5d2eed57f2d7a24b791ea3b869d
 #grilla {
     position: relative;
 }
 
-#grilla > div {
+#grilla>div {
     position: absolute;
     /* width: 50px;
     height: 50px;
