--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cinzel+Decorative:wght@700&display=swap');
 body{
    
     background-image: url(./imagenes/background.jpg);
@@ -14,6 +14,7 @@ body{
         position: relative;
         background-repeat: no-repeat;
         background-size: cover; 
+        font-family: 'Bebas Neue', cursive;
       
      
     
@@ -41,6 +42,7 @@ display: flex;
     font-size: 40px;
     margin-top: 32px;
     margin-bottom: 16px;
+    font-family: 'Cinzel Decorative', cursive;
 }
 
 
