--- a/style.css
+++ b/style.css
@@ -15,6 +15,14 @@ body {
     background-size: cover;
 }
 
+#overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
 /* ---------------- ESTILOS GRILLA ------------------ */
 
 .grilla {
@@ -115,6 +123,15 @@ body {
     align-items: center; */
 }
 
+/*Comienzan clases especiales*/
 .seleccionado {
     border: 1px solid black;
+}
+
+.hidden {
+    display: none;
+}
+
+.no-scroll {
+    position: fixed;
 }
