--- a/style.css
+++ b/style.css
@@ -127,7 +127,9 @@ body {
 
 #grilla > div {
 	position: absolute;
+	cursor: pointer;
 	font-size: 25px; /* puse 25px para que el tamanio original no se vea tan chiquito, pero es a modificar a criterio de la maquetadora!
+
 	/* width: 50px;
     height: 50px;
     border: 1px solid black;
@@ -180,7 +182,8 @@ body {
 /*Comienzan clases especiales*/
 
 .seleccionado {
-	border: 1px solid black;
+	border: 2px solid rgb(65, 59, 59);
+	border-radius: 15px;
 }
 
 .hidden {
