--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cinzel+Decorative:wght@700&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Outline&family=Montserrat:wght@100&display=swap');
-
 @keyframes shrink {
 	from {
 		transform: scale(1);
@@ -33,15 +32,6 @@ body {
 	margin: 0;
 }
 
-i {
-	color: white;
-}
-
-.dialogo > h2,
-.dialogo > p {
-	font-family: 'Montserrat', sans-serif;
-}
-
 #overlay {
 	background-color: rgba(0, 0, 0, 0.5);
 	right: 0;
@@ -52,21 +42,93 @@ i {
 	z-index: 1;
 }
 
-/* ---------------- ESTILOS GRILLA ------------------ */
+i {
+	color: white;
+}
+
+.dialogo>h2, .dialogo>p {
+	font-family: 'Montserrat', sans-serif;
+}
+
+.dialogo-botones {
+	display: flex;
+	justify-content: center;
+	padding: 5%;
+}
+
+.botones {
+	border: none;
+	background-color: rgb(238, 52, 83);
+	color: white;
+	font-family: 'Fredericka the Great', cursive;
+	font-size: 1.5rem;
+}
+
+#grilla {
+	position: relative;
+}
+
+.mosaico {
+	position: absolute;
+	cursor: pointer;
+	transition: 0.3s;
+	font-size: 2rem;
+}
+
+.dialogo>p {
+	font-weight: bold;
+	color: rgba(0, 0, 0, 0.876);
+}
+
+.dialogo {
+	position: absolute;
+	background-color: #fafafa;
+	top: 50%;
+	left: 50%;
+	width: 35%;
+	padding: 3px;
+	text-align: center;
+	border-radius: 7px;
+	margin: 20px;
+	z-index: 2;
+	transform: translate(-50%, -50%);
+}
+
+.boton {
+	border: none;
+	border-radius: 5px;
+	padding: 10px 10px;
+	cursor: pointer;
+	margin: 3%;
+	background-color: rgb(238, 52, 83);
+	color: white;
+	font-family: 'Fredericka the Great', cursive;
+	font-size: 1.5rem;
+}
+
+.boton:hover, .botones:hover {
+	background-color: rgb(187, 84, 101);
+}
+
+.boton-cancelar {
+	background-color: rgb(206, 198, 198);
+	color: black;
+}
+
+.boton-cancelar:hover {
+	background-color: rgb(156, 149, 149);
+}
+
+.juego-terminado {
+	display: flex;
+	background-color: brown;
+}
 
 .estructura {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	/* height: 100%; */
-}
-
-.fondo-negro {
-	/* background-color: rgb(66, 62, 62);
-	opacity: 0.5;
-	border: 2px white solid;
-	border-radius: 8px;
-	box-sizing: content-box; */
 }
 
 .matcheadas {
@@ -99,98 +161,6 @@ i {
 	align-items: center;
 }
 
-.contenedor-cuenta-regresiva {
-	display: flex;
-	background-color: rgb(238, 52, 83);
-	border-radius: 8px;
-	border: white solid 2px;
-	color: white;
-	font-family: 'Fredericka the Great', cursive;
-	align-items: center;
-	padding: 0px 10px;
-	margin-top: 33%;
-}
-
-.fa-hourglass-half {
-	padding-right: 5px;
-}
-
-.juego-terminado {
-	display: flex;
-	background-color: brown;
-}
-
-.dialogo-botones {
-	display: flex;
-	justify-content: center;
-	padding: 5%;
-}
-
-.botones {
-	border: none;
-	background-color: rgb(238, 52, 83);
-	color: white;
-	font-family: 'Fredericka the Great', cursive;
-	font-size: 1.5rem;
-}
-
-#grilla {
-	position: relative;
-}
-
-.mosaico {
-	position: absolute;
-	cursor: pointer;
-	transition: 0.3s;
-	font-size: 2rem;
-}
-
-.dialogo > p {
-	font-weight: bold;
-	color: rgba(0, 0, 0, 0.876);
-}
-
-.dialogo {
-	position: absolute;
-	background-color: #fafafa;
-	top: 50%;
-	left: 50%;
-	width: 35%;
-	padding: 3px;
-	text-align: center;
-	border-radius: 7px;
-	margin: 20px;
-	z-index: 2;
-	transform: translate(-50%, -50%);
-}
-
-.boton {
-	border: none;
-	border-radius: 5px;
-	padding: 10px 10px;
-
-	cursor: pointer;
-	margin: 3%;
-	background-color: rgb(238, 52, 83);
-	color: white;
-	font-family: 'Fredericka the Great', cursive;
-	font-size: 1.5rem;
-}
-
-.boton:hover,
-.botones:hover {
-	background-color: rgb(187, 84, 101);
-}
-
-.boton-cancelar {
-	background-color: rgb(206, 198, 198);
-	color: black;
-}
-
-.boton-cancelar:hover {
-	background-color: rgb(156, 149, 149);
-}
-
 #boton-ayuda:hover {
 	cursor: pointer;
 }
@@ -204,10 +174,32 @@ i {
 	cursor: pointer;
 }
 
-/*  CLASE PARA BORRAR BARRA INFORMATIVA
-.informacion-hidden{
-    display: none;
-} */
+.fondo-negro {
+	background: rgb(0 0 0 / 50%);
+	border: 4px solid white;
+	border-radius: 8px;
+	box-sizing: border-box;
+	/* ---------------------Mejorar esto para que no quede hardcodeado!!!!--------------- */
+	width: 470px;
+	height: 470px;
+	/* ---------------------Mejorar esto para que no quede hardcodeado!!!!--------------- */
+}
+
+.contenedor-cuenta-regresiva {
+	display: flex;
+	background-color: rgb(238, 52, 83);
+	border-radius: 8px;
+	border: white solid 2px;
+	color: white;
+	font-family: 'Fredericka the Great', cursive;
+	align-items: center;
+	padding: 0px 10px;
+	margin-top: 15px;
+}
+
+.fa-hourglass-half {
+	padding-right: 5px;
+}
 
 /*Comienzan clases especiales*/
 
